# officegate

./: .pre-commit-config.yaml  README.md  pyproject.toml
officegate/: api.py  doc_naming.py  hooks.py  modules.txt  pdf_generator.py  pdf_override.py  print_format.py
officegate/officegate/custom/: company.json  customer.json  delivery_note.json  delivery_note_item.json  packed_item.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_order_item.json  quotation.json  quotation_item.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  sales_person.json  supplier.json
officegate/officegate/print_format/co_delivery_note/: co_delivery_note.json
officegate/officegate/print_format/co_purchase_invoice/: co_purchase_invoice.json
officegate/officegate/print_format/co_purchase_order/: co_purchase_order.json
officegate/officegate/print_format/co_quotation/: co_quotation.json
officegate/officegate/print_format/co_quotation_projects/: co_quotation_projects.json
officegate/officegate/print_format/co_sales_order/: co_sales_order.json
officegate/officegate/print_format/co_tax_invoice/: co_tax_invoice.json
officegate/officegate/print_format/og_delivery_note/: og_delivery_note.json
officegate/officegate/print_format/og_payment_receipt/: og_payment_receipt.json
officegate/officegate/print_format/og_purchase_invoice/: og_purchase_invoice.json
officegate/officegate/print_format/og_purchase_order/: og_purchase_order.json
officegate/officegate/print_format/og_quotation/: og_quotation.json
officegate/officegate/print_format/og_sales_order/: og_sales_order.json
officegate/officegate/print_format/og_tax_invoice/: og_tax_invoice.json
officegate/officegate/report/customer_statement_of_accounts/: customer_statement_of_accounts.html  customer_statement_of_accounts.js  customer_statement_of_accounts.json  customer_statement_of_accounts.py
officegate/officegate/report/reserved_stock_report/: reserved_stock_report.js  reserved_stock_report.json  reserved_stock_report.py
officegate/public/js/: custom.js  quotations.js
